--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-toastify": "^11.0.5",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
