--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.cjs"
   },
   "dependencies": {
     "@supabase/auth-ui-react": "^0.4.7",
@@ -18,7 +19,7 @@
     "express": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^11.0.5",
     "redis": "^4.7.0",
