--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,14 +9,14 @@
 
   "icons": [
     {
-      "src": "/logo-192.png",
+      "src": "/src/assets/PHOTO-2025-05-24-08-04-28.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpeg"
     },
     {
-      "src": "/logo-512.png",
+      "src": "/src/assets/PHOTO-2025-05-24-08-04-28.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpeg"
     }
   ]
 }
